# llm_earnings_agent

./: .gitignore  README.md  pyproject.toml
src/llm_earnings_agent/: backtest.py  cache.py  cli.py  pipeline.py  schemas.py
src/llm_earnings_agent/agents/: __init__.py  _common.py  aggregator.py  dynamic.py  fundamentals.py  macro.py  news.py  transcript.py
src/llm_earnings_agent/data/: events.py  fundamentals.py  news.py  prices.py  transcripts.py
src/llm_earnings_agent/prompts/: aggregator.md  dynamic.md  fundamentals.md  macro.md  news.md  transcript.md
src/llm_earnings_agent/runtime/: api.py  base.py  claude_code.py
tests/: test_aggregator.py  test_backtest.py  test_cache.py  test_transcripts.py
