[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-earnings-agent"
version = "0.1.0"
description = "LLM-agent earnings analyzer (MarketSenseAI 2.0 style)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rutuja Bodhe" }]
dependencies = [
    "pydantic>=2.6",
    "anthropic>=0.39",
    "httpx>=0.27",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "inspect-ai>=0.3",
]

[project.scripts]
llm-earnings-agent = "llm_earnings_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_earnings_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
